clusters/homelab/core/observability/operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    gateway.infra.services/allow-routes: "true"
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
