clusters/homelab/core/observability/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: observability
spec:
  ports:
  - name: otlp
    port: 4317
    protocol: TCP
    targetPort: otlp-grpc
  - name: otlp-http
    port: 4318
    protocol: TCP
    targetPort: otlp-http
  selector:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: observability.backend
    app.kubernetes.io/name: backend-collector
  sessionAffinity: None
  type: ClusterIP
