clusters/homelab/core/observability/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: observability
  namespace: observability
spec:
  hostnames:
  - observability.klimlive.de
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: services
    namespace: infra
    sectionName: main
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: backend-signoz
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
